--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Dev Icon fonts-->
      <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />         
     <!-- CSS do projeto-->
-     <link rel="stylesheet" href="css/styles.css">
+     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <main id="container">
